Updated agreement entity

--- a/templates/agreement/index.html.twig
+++ b/templates/agreement/index.html.twig
@@ -21,7 +21,8 @@
                 <thead>
                     <tr>
                         <th scope="col">{% trans %}label.id{% endtrans %}</th>
-                        <th scope="col">{% trans %}label.status{% endtrans %}</th>
+                        <th scope="col">{% trans %}label.name{% endtrans %}</th>
+                        <th scope="col">{% trans %}label.employee{% endtrans %}</th>
                         <th scope="col">{% trans %}label.type{% endtrans %}</th>
                         <th scope="col">{% trans %}label.period{% endtrans %}</th>
                         <th scope="col">{% trans %}label.currency{% endtrans %}</th>
@@ -30,9 +31,9 @@
                         <th scope="col">{% trans %}label.pensionPercentage{% endtrans %}</th>
                         <th scope="col">{% trans %}label.integralSalary{% endtrans %}</th>
                         <th scope="col">{% trans %}label.highRisk{% endtrans %}</th>
-                        <th scope="col">{% trans %}label.isActive{% endtrans %}</th>
                         <th scope="col">{% trans %}label.initAt{% endtrans %}</th>
                         <th scope="col">{% trans %}label.finishAt{% endtrans %}</th>
+                        <th scope="col">{% trans %}label.status{% endtrans %}</th>
                         <th scope="col" class="text-center" style="width: 105px;"><i class="fa fa-cogs" aria-hidden="true"></i></th>
                     </tr>
                 </thead>
