Updated select returned using ajax

--- a/templates/accountType/edit.html.twig
+++ b/templates/accountType/edit.html.twig
@@ -41,5 +41,5 @@
 {% endblock %}
 
 {% block javascripts %}
-    <script src="{{ asset('js/accountTypes.js') }}"></script>
+    <script src="{{ asset('bundles/flexphppayroll/js/accountTypes.js') }}"></script>
 {% endblock %}
