--- a/templates/agreement/edit.html.twig
+++ b/templates/agreement/edit.html.twig
@@ -41,5 +41,5 @@
 {% endblock %}
 
 {% block javascripts %}
-    <script src="{{ asset('js/flexphp.payroll.agreements.js') }}"></script>
+    <script src="{{ asset('bundles/flexphppayroll/js/agreements.js') }}"></script>
 {% endblock %}
