--- a/templates/agreementStatus/new.html.twig
+++ b/templates/agreementStatus/new.html.twig
@@ -33,5 +33,5 @@
 {% endblock %}
 
 {% block javascripts %}
-    <script src="{{ asset('js/agreementStatus.js') }}"></script>
+    <script src="{{ asset('bundles/flexphppayroll/js/agreementStatus.js') }}"></script>
 {% endblock %}
