--- a/templates/agreementType/new.html.twig
+++ b/templates/agreementType/new.html.twig
@@ -33,5 +33,5 @@
 {% endblock %}
 
 {% block javascripts %}
-    <script src="{{ asset('js/agreementTypes.js') }}"></script>
+    <script src="{{ asset('bundles/flexphppayroll/js/agreementTypes.js') }}"></script>
 {% endblock %}
