--- a/templates/bank/edit.html.twig
+++ b/templates/bank/edit.html.twig
@@ -41,5 +41,5 @@
 {% endblock %}
 
 {% block javascripts %}
-    <script src="{{ asset('js/flexphp.payroll.banks.js') }}"></script>
+    <script src="{{ asset('bundles/flexphppayroll/js/banks.js') }}"></script>
 {% endblock %}
