--- a/templates/employee/edit.html.twig
+++ b/templates/employee/edit.html.twig
@@ -41,5 +41,5 @@
 {% endblock %}
 
 {% block javascripts %}
-    <script src="{{ asset('js/flexphp.payroll.employees.js') }}"></script>
+    <script src="{{ asset('bundles/flexphppayroll/js/employees.js') }}"></script>
 {% endblock %}
