--- a/templates/employeeSubType/edit.html.twig
+++ b/templates/employeeSubType/edit.html.twig
@@ -41,5 +41,5 @@
 {% endblock %}
 
 {% block javascripts %}
-    <script src="{{ asset('js/employeeSubTypes.js') }}"></script>
+    <script src="{{ asset('bundles/flexphppayroll/js/employeeSubTypes.js') }}"></script>
 {% endblock %}
