--- a/templates/agreement/new.html.twig
+++ b/templates/agreement/new.html.twig
@@ -33,5 +33,5 @@
 {% endblock %}
 
 {% block javascripts %}
-    <script src="{{ asset('js/flexphp.payroll.agreements.js') }}"></script>
+    <script src="{{ asset('bundles/flexphppayroll/js/agreements.js') }}"></script>
 {% endblock %}
