--- a/templates/agreementPeriod/edit.html.twig
+++ b/templates/agreementPeriod/edit.html.twig
@@ -41,5 +41,5 @@
 {% endblock %}
 
 {% block javascripts %}
-    <script src="{{ asset('js/agreementPeriods.js') }}"></script>
+    <script src="{{ asset('bundles/flexphppayroll/js/agreementPeriods.js') }}"></script>
 {% endblock %}
