--- a/templates/agreementPeriod/new.html.twig
+++ b/templates/agreementPeriod/new.html.twig
@@ -33,5 +33,5 @@
 {% endblock %}
 
 {% block javascripts %}
-    <script src="{{ asset('js/agreementPeriods.js') }}"></script>
+    <script src="{{ asset('bundles/flexphppayroll/js/agreementPeriods.js') }}"></script>
 {% endblock %}
