--- a/templates/bank/new.html.twig
+++ b/templates/bank/new.html.twig
@@ -33,5 +33,5 @@
 {% endblock %}
 
 {% block javascripts %}
-    <script src="{{ asset('js/flexphp.payroll.banks.js') }}"></script>
+    <script src="{{ asset('bundles/flexphppayroll/js/banks.js') }}"></script>
 {% endblock %}
