--- a/templates/employee/new.html.twig
+++ b/templates/employee/new.html.twig
@@ -33,5 +33,5 @@
 {% endblock %}
 
 {% block javascripts %}
-    <script src="{{ asset('js/flexphp.payroll.employees.js') }}"></script>
+    <script src="{{ asset('bundles/flexphppayroll/js/employees.js') }}"></script>
 {% endblock %}
