--- a/templates/employeeType/edit.html.twig
+++ b/templates/employeeType/edit.html.twig
@@ -41,5 +41,5 @@
 {% endblock %}
 
 {% block javascripts %}
-    <script src="{{ asset('js/employeeTypes.js') }}"></script>
+    <script src="{{ asset('bundles/flexphppayroll/js/employeeTypes.js') }}"></script>
 {% endblock %}
