--- a/templates/payrollType/new.html.twig
+++ b/templates/payrollType/new.html.twig
@@ -33,5 +33,5 @@
 {% endblock %}
 
 {% block javascripts %}
-    <script src="{{ asset('js/payrollTypes.js') }}"></script>
+    <script src="{{ asset('bundles/flexphppayroll/js/payrollTypes.js') }}"></script>
 {% endblock %}
