--- a/templates/payroll/index.html.twig
+++ b/templates/payroll/index.html.twig
@@ -10,10 +10,10 @@
                 {% trans %}title.list{% endtrans %}
             </h3>
             <div class="toolbar ml-auto">
-                <a href="{{ path('flexphp.payroll.payrolls.new') }}" class="btn btn-primary">
-                    <i class="fa fa-plus" aria-hidden="true"></i>
-                    <span class="btn-text">{% trans %}title.new{% endtrans %}</span>
-                </a>
+                {# <a href="{{ path('flexphp.payroll.payrolls.new') }}" class="btn btn-primary"> #}
+                {#     <i class="fa fa-plus" aria-hidden="true"></i> #}
+                {#     <span class="btn-text">{% trans %}title.new{% endtrans %}</span> #}
+                {# </a> #}
             </div>
         </div>
         <div class="card-body p-0 table-responsive-sm">
@@ -21,20 +21,19 @@
                 <thead>
                     <tr>
                         <th scope="col">{% trans %}label.id{% endtrans %}</th>
-                        <th scope="col">{% trans %}label.prefix{% endtrans %}</th>
-                        <th scope="col">{% trans %}label.number{% endtrans %}</th>
+                        <th scope="col">{% trans %}label.numeration{% endtrans %}</th>
                         <th scope="col">{% trans %}label.employee{% endtrans %}</th>
                         <th scope="col">{% trans %}label.provider{% endtrans %}</th>
                         <th scope="col">{% trans %}label.status{% endtrans %}</th>
                         <th scope="col">{% trans %}label.type{% endtrans %}</th>
-                        <th scope="col">{% trans %}label.traceId{% endtrans %}</th>
-                        <th scope="col">{% trans %}label.hash{% endtrans %}</th>
-                        <th scope="col">{% trans %}label.hashType{% endtrans %}</th>
-                        <th scope="col">{% trans %}label.message{% endtrans %}</th>
-                        <th scope="col">{% trans %}label.pdfPath{% endtrans %}</th>
-                        <th scope="col">{% trans %}label.xmlPath{% endtrans %}</th>
-                        <th scope="col">{% trans %}label.parentId{% endtrans %}</th>
-                        <th scope="col">{% trans %}label.downloadedAt{% endtrans %}</th>
+                        {# <th scope="col">{% trans %}label.traceId{% endtrans %}</th> #}
+                        {# <th scope="col">{% trans %}label.hash{% endtrans %}</th> #}
+                        {# <th scope="col">{% trans %}label.hashType{% endtrans %}</th> #}
+                        {# <th scope="col">{% trans %}label.message{% endtrans %}</th> #}
+                        {# <th scope="col">{% trans %}label.pdfPath{% endtrans %}</th> #}
+                        {# <th scope="col">{% trans %}label.xmlPath{% endtrans %}</th> #}
+                        {# <th scope="col">{% trans %}label.parentId{% endtrans %}</th> #}
+                        {# <th scope="col">{% trans %}label.downloadedAt{% endtrans %}</th> #}
                         <th scope="col" class="text-center" style="width: 105px;"><i class="fa fa-cogs" aria-hidden="true"></i></th>
                     </tr>
                 </thead>
