--- a/templates/paysheet/index.html.twig
+++ b/templates/paysheet/index.html.twig
@@ -59,5 +59,5 @@
 
 {% block javascripts %}
     <script src="{{ asset('js/jquery/jquery.infinite.min.js') }}"></script>
-    <script src="{{ asset('js/paysheets.js') }}"></script>
+    <script src="{{ asset('bundles/flexphppayroll/js/paysheets.js') }}"></script>
 {% endblock %}
