Added Paysheet Controller create method

--- a/templates/paysheet/__paysheet_agreement.html.twig
+++ b/templates/paysheet/__paysheet_agreement.html.twig
@@ -62,12 +62,12 @@
     <div class="form-row">
         <div class="form-group col-md-4">
             <label for="agreement[initAt]" class="col-form-label">{% trans from 'agreement' %}label.initAt{% endtrans %}</label>
-            <input name="agreement[initAt]" data-zdp_show_icon="false" class="form-control date-picker" type="text" />
+            <input name="agreement[initAt]" data-zdp_show_icon="false" class="form-control date-picker" type="text" required />
         </div>
 
         <div class="form-group col-md-4">
             <label for="agreement[finishAt]" class="col-form-label">{% trans from 'agreement' %}label.finishAt{% endtrans %}</label>
-            <input name="agreement[finishAt]" data-zdp_show_icon="false" class="form-control date-picker" type="text" />
+            <input name="agreement[finishAt]" data-zdp_show_icon="false" class="form-control date-picker" type="text" required />
         </div>
 
         <div class="form-group col-md-4">
