--- a/templates/paysheet/_ajax.html.twig
+++ b/templates/paysheet/_ajax.html.twig
@@ -8,7 +8,7 @@
         <td class="timeago-format">{{ _paysheet.createdAt ? _paysheet.createdAt|date('Y-m-d H:i:s') : '-' }}</td>
         <td class="text-left">
             <div class="btn-group">
-                <a href="{{ path('paysheets.read', {id: _paysheet.id}) }}" class="btn btn-sm btn-outline-light" title="{% trans from 'messages' %}action.read{% endtrans %}">
+                <a href="{{ path('flexphp.payroll.paysheets.read', {id: _paysheet.id}) }}" class="btn btn-sm btn-outline-light" title="{% trans from 'messages' %}action.read{% endtrans %}">
                     <i class="fa fa-eye text-dark" aria-hidden="true"></i>
                 </a>
 
