Added findEmployees methos in Paysheet Controller

--- a/templates/paysheet/_get_payroll_button.html.twig
+++ b/templates/paysheet/_get_payroll_button.html.twig
@@ -2,10 +2,10 @@
 {{ include('form/_action_confirmation.html.twig', {message: '__payroll.request'|trans([], 'paysheet')}) }}
 {% set _confirmation = paysheet.payrollInstance and paysheet.payrollInstance.downloadedAt ? '' : 'data-confirmation="true"' %}
 {% set _style = style|default('') %}
-    <form class="d-inline" id="get-payroll-{{ paysheet.id }}" name="get-payroll-{{ paysheet.id }}" method="get" action="{{ path('paysheets.einvoice', {id: paysheet.id}) }}" {{ _confirmation }}>
-        <button type="submit" class="btn {{ _style }} btn-outline-success" tabindex="-1" title="{{ (not _style) ? '' : '__payroll.einvoice'|trans([], 'paysheet') }}">
+    <form class="d-inline" id="get-payroll-{{ paysheet.id }}" name="get-payroll-{{ paysheet.id }}" method="get" action="{{ path('flexphp.payroll.paysheets.epayroll', {id: paysheet.id}) }}" {{ _confirmation }}>
+        <button type="submit" class="btn {{ _style }} btn-outline-success" tabindex="-1" title="{{ (not _style) ? '' : '__payroll.epayroll'|trans([], 'paysheet') }}">
             <i class="fa fa-file-invoice-dollar" aria-hidden="true"></i>
-            <span class="btn-text">{{ (not _style) ? '__payroll.einvoice'|trans([], 'paysheet') }}</span>
+            <span class="btn-text">{{ (not _style) ? '__payroll.epayroll'|trans([], 'paysheet') }}</span>
         </button>
     </form>
 {% endif %}
