Updated employee partial form in paysheet form: js and inputs html

--- a/templates/paysheet/__paysheet_base.html.twig
+++ b/templates/paysheet/__paysheet_base.html.twig
@@ -187,5 +187,5 @@
 {% endblock %}
 
 {% block javascripts %}
-    <script src="{{ asset('js/__paysheet.js') }}"></script>
+    <script src="{{ asset('bundles/flexphppayroll/js/__paysheet.js') }}"></script>
 {% endblock %}
