Added agreement ajax request in paysheet form

--- a/templates/paysheet/__paysheet_employee.html.twig
+++ b/templates/paysheet/__paysheet_employee.html.twig
@@ -62,7 +62,8 @@
 
         <div class="form-group col-md-6">
             <label for="employee[paymentMethod]" class="col-form-label">{% trans from 'employee' %}label.paymentMethod{% endtrans %}</label>
-            <select name="employee[paymentMethod]" class="form-control custom-select"></select>
+            <select name="employee[paymentMethod]" class="form-control custom-select" required>
+            </select>
         </div>
 
         <div class="form-group col-md-6">
