--- a/templates/paysheet/__paysheet_agreement.html.twig
+++ b/templates/paysheet/__paysheet_agreement.html.twig
@@ -13,39 +13,48 @@
 
 <div id="agreementData" class="collapse show card-body">
     <div class="form-row">
-        <div class="form-group col-12">
-            <label for="agreement[id]" class="col-form-label">{% trans from 'agreement' %}title.agreement{% endtrans %}</label>
-            <select name="agreement[id]" class="form-control" autofocus>
+        <div class="form-group col-12 col-md-6">
+            <label for="agreement[id]" class="col-form-label">{% trans from 'agreement' %}entity{% endtrans %}</label>
+            <select name="agreement[id]" class="form-control custom-select" autofocus>
             </select>
+        </div>
+
+        <div class="form-group col-12 col-md-6">
+            <label for="agreement[name]" class="col-form-label">{% trans from 'agreement' %}label.name{% endtrans %}</label>
+            <input name="agreement[name]" class="form-control" type="text" required />
         </div>
     </div>
 
     <div class="form-row">
         <div class="form-group col-12 col-md-4">
             <label for="agreement[status]" class="col-form-label required">{% trans from 'agreement' %}label.status{% endtrans %}</label>
-            <input name="agreement[status]" class="form-control" type="text"  value="" required />
+            <select name="agreement[status]" class="form-control custom-select" required>
+            </select>
         </div>
 
         <div class="form-group col-12 col-md-4">
             <label for="agreement[type]" class="col-form-label required">{% trans from 'agreement' %}label.type{% endtrans %}</label>
-            <input name="agreement[type]" class="form-control" type="text"  value="" required />
+            <select name="agreement[type]" class="form-control custom-select" required>
+            </select>
         </div>
 
         <div class="form-group col-12 col-md-4">
             <label for="agreement[period]" class="col-form-label required">{% trans from 'agreement' %}label.period{% endtrans %}</label>
-            <input name="agreement[period]" class="form-control" period="text"  value="" required />
+            <select name="agreement[period]" class="form-control custom-select" required>
+            </select>
         </div>
     </div>
 
     <div class="form-row">
         <div class="form-group col-12 col-md-4">
             <label for="agreement[currency]" class="col-form-label required">{% trans from 'agreement' %}label.currency{% endtrans %}</label>
-            <select name="agreement[currency]" class="form-control" required></select>
+            <select name="agreement[currency]" class="form-control custom-select" required>
+            </select>
         </div>
 
         <div class="form-group col-12 col-md-4">
             <label for="agreement[salary]" class="col-form-label required">{% trans from 'agreement' %}label.salary{% endtrans %}</label>
-            <select name="agreement[salary]" class="form-control" required></select>
+            <input name="agreement[salary]" class="form-control" type="number" required />
         </div>
 
         <div class="form-group col-12 col-md-2">
