--- a/templates/paysheet/_ajax.html.twig
+++ b/templates/paysheet/_ajax.html.twig
@@ -2,6 +2,7 @@
     <tr>
         <td>{{ _paysheet.id }}</td>
         <td>{{ _paysheet.statusIdInstance.name|default('-') }}</td>
+        <td>{{ _paysheet.employeeIdInstance.name|default('-') }}</td>
         <td class="money-format text-right">{{ _paysheet.isDraft ? 0 : _paysheet.totalPaid }}</td>
         <td class="money-format text-right">{{ _paysheet.total }}</td>
         <td class="money-format text-right">{{ _paysheet.isDraft ? 0 : (_paysheet.total - _paysheet.totalPaid) }}</td>
