--- a/templates/paysheet/show.html.twig
+++ b/templates/paysheet/show.html.twig
@@ -81,16 +81,16 @@
 
             <hr />
 
-            {% if paysheet.expiratedAt %}
-            <div class="form-row">
-                <div class="col">
-                    <label>{% trans %}label.expiratedAt{% endtrans %}</label>
-                    <div class="form-control-plaintext">
-                        <span class="date-format">{{ paysheet.expiratedAt|date('Y-m-d H:i:s') }}</span>
-                    </div>
-                </div>
-            </div>
-            {% endif %}
+{#             {% if paysheet.expiratedAt %} #}
+{#             <div class="form-row"> #}
+{#                 <div class="col"> #}
+{#                     <label>{% trans %}label.expiratedAt{% endtrans %}</label> #}
+{#                     <div class="form-control-plaintext"> #}
+{#                         <span class="date-format">{{ paysheet.expiratedAt|date('Y-m-d H:i:s') }}</span> #}
+{#                     </div> #}
+{#                 </div> #}
+{#             </div> #}
+{#             {% endif %} #}
 
 {#             <div class="form-row"> #}
 {#                 <div class="col"> #}
