--- a/templates/paysheet/__paysheet_accrued_basic.html.twig
+++ b/templates/paysheet/__paysheet_accrued_basic.html.twig
@@ -14,7 +14,7 @@
     <div class="form-row">
         <div class="form-group col-6">
             <label for="accrued[basic][0][days]">Días Trabajados</label>
-            <input name="accrued[basic][0][days]" class="form-control" type="text" required />
+            <input name="accrued[basic][0][days]" class="form-control" type="text" required value="{{ paysheet.details.accrued.basic.0.days|default('') }}" />
         </div>
 
         <div class="form-group col-6">
@@ -23,7 +23,7 @@
                 <div class="input-group-prepend">
                     <span class="input-group-text">$</span>
                 </div>
-                <input name="accrued[basic][0][amount]" class="form-control" type="text" required />
+                <input name="accrued[basic][0][amount]" class="form-control" type="text" required value="{{ paysheet.details.accrued.basic.0.amount|default('') }}" />
             </div>
         </div>
     </div>
