--- a/templates/paysheet/__paysheet_accrued_bonus.html.twig
+++ b/templates/paysheet/__paysheet_accrued_bonus.html.twig
@@ -10,7 +10,7 @@
     </div>
 </div>
 
-<div id="accruedBonusData" class="collapse hide card-body">
+<div id="accruedBonusData" class="collapse {{ paysheet.details.accrued.bonus.0.amount|default('') != '' ? 'show' : 'hide' }} card-body">
     <div class="form-row">
         <div class="form-group col-4">
             <label for="accrued[bonus][0][amount]">Monto</label>
@@ -18,7 +18,7 @@
                 <div class="input-group-prepend">
                     <span class="input-group-text">$</span>
                 </div>
-                <input name="accrued[bonus][0][amount]" class="form-control" type="text" />
+                <input name="accrued[bonus][0][amount]" class="form-control" type="text" value="{{ paysheet.details.accrued.bonus.0.amount|default('') }}" />
             </div>
         </div>
 
@@ -28,13 +28,13 @@
                 <div class="input-group-prepend">
                     <span class="input-group-text">$</span>
                 </div>
-                <input name="accrued[bonus][0][noSalary]" class="form-control" type="text" />
+                <input name="accrued[bonus][0][noSalary]" class="form-control" type="text" value="{{ paysheet.details.accrued.bonus.0.noSalary|default('') }}" />
             </div>
         </div>
 
         <div class="form-group col-4">
             <label for="accrued[bonus][0][days]">Días</label>
-            <input name="accrued[bonus][0][days]" class="form-control" type="text" />
+            <input name="accrued[bonus][0][days]" class="form-control" type="text" value="{{ paysheet.details.accrued.bonus.0.days|default('') }}" />
         </div>
     </div>
 </div>
