--- a/templates/paysheet/__paysheet_accrued_cessation.html.twig
+++ b/templates/paysheet/__paysheet_accrued_cessation.html.twig
@@ -10,7 +10,7 @@
     </div>
 </div>
 
-<div id="accruedCessationData" class="collapse hide card-body">
+<div id="accruedCessationData" class="collapse {{ paysheet.details.accrued.cessation.0.amount|default('') != '' ? 'show' : 'hide' }} card-body">
     <div class="form-row">
         <div class="form-group col-4">
             <label for="accrued[cessation][0][amount]">Monto</label>
@@ -18,7 +18,7 @@
                 <div class="input-group-prepend">
                     <span class="input-group-text">$</span>
                 </div>
-                <input name="accrued[cessation][0][amount]" class="form-control" type="text" />
+                <input name="accrued[cessation][0][amount]" class="form-control" type="text" value="{{ paysheet.details.accrued.cessation.0.amount|default('') }}" />
             </div>
         </div>
 
@@ -28,7 +28,7 @@
                 <div class="input-group-prepend">
                     <span class="input-group-text">$</span>
                 </div>
-                <input name="accrued[cessation][0][noSalary]" class="form-control" type="text" />
+                <input name="accrued[cessation][0][noSalary]" class="form-control" type="text" value="{{ paysheet.details.accrued.cessation.0.noSalary|default('') }}" />
             </div>
         </div>
 
@@ -38,7 +38,7 @@
                 <div class="input-group-prepend">
                     <span class="input-group-text">%</span>
                 </div>
-                <input name="accrued[cessation][0][percentage]" class="form-control" type="text" />
+                <input name="accrued[cessation][0][percentage]" class="form-control" type="text" value="{{ paysheet.details.accrued.cessation.0.percentage|default('') }}" />
             </div>
         </div>
 
