--- a/templates/paysheet/__paysheet_accrued_endowment.html.twig
+++ b/templates/paysheet/__paysheet_accrued_endowment.html.twig
@@ -10,7 +10,7 @@
     </div>
 </div>
 
-<div id="accruedEndowmentData" class="collapse hide card-body">
+<div id="accruedEndowmentData" class="collapse {{ paysheet.details.accrued.endowment.0.amount|default('') != '' ? 'show' : 'hide' }} card-body">
     <div class="form-row">
         <div class="form-group col-4">
             <label for="accrued[endowment][0][amount]">Monto</label>
@@ -18,7 +18,7 @@
                 <div class="input-group-prepend">
                     <span class="input-group-text">$</span>
                 </div>
-                <input name="accrued[endowment][0][amount]" class="form-control" type="text" />
+                <input name="accrued[endowment][0][amount]" class="form-control" type="text" value="{{ paysheet.details.accrued.endowment.0.amount|default('') }}" />
             </div>
         </div>
     </div>
