--- a/templates/paysheet/__paysheet_accrued_basic.html.twig
+++ b/templates/paysheet/__paysheet_accrued_basic.html.twig
@@ -23,7 +23,7 @@
                 <div class="input-group-prepend">
                     <span class="input-group-text">$</span>
                 </div>
-                <input name="accrued[basic][0][amount]" class="form-control" type="text" required value="{{ paysheet.details.accrued.basic.0.amount|default('') }}" />
+                <input name="accrued[basic][0][amount]" class="form-control accrued" type="text" required value="{{ paysheet.details.accrued.basic.0.amount|default('') }}" />
             </div>
         </div>
     </div>
