--- a/templates/paysheet/__paysheet_accrued_endowment.html.twig
+++ b/templates/paysheet/__paysheet_accrued_endowment.html.twig
@@ -18,7 +18,7 @@
                 <div class="input-group-prepend">
                     <span class="input-group-text">$</span>
                 </div>
-                <input name="accrued[endowment][0][amount]" class="form-control" type="text" value="{{ paysheet.details.accrued.endowment.0.amount|default('') }}" />
+                <input name="accrued[endowment][0][amount]" class="form-control accrued" type="text" value="{{ paysheet.details.accrued.endowment.0.amount|default('') }}" />
             </div>
         </div>
     </div>
