--- a/templates/paysheet/__paysheet_accrued_transport.html.twig
+++ b/templates/paysheet/__paysheet_accrued_transport.html.twig
@@ -18,7 +18,7 @@
                 <div class="input-group-prepend">
                     <span class="input-group-text">$</span>
                 </div>
-                <input name="accrued[transport][0][amount]" class="form-control" type="text" required value="{{ paysheet.details.accrued.transport.0.amount|default('') }}" />
+                <input name="accrued[transport][0][amount]" class="form-control accrued" type="text" required value="{{ paysheet.details.accrued.transport.0.amount|default('') }}" />
             </div>
         </div>
 
@@ -28,7 +28,7 @@
                 <div class="input-group-prepend">
                     <span class="input-group-text">$</span>
                 </div>
-                <input name="accrued[transport][0][viaticSalary]" class="form-control" type="text" value="{{ paysheet.details.accrued.transport.0.viaticSalary|default('') }}" />
+                <input name="accrued[transport][0][viaticSalary]" class="form-control accrued" type="text" value="{{ paysheet.details.accrued.transport.0.viaticSalary|default('') }}" />
             </div>
         </div>
 
@@ -38,7 +38,7 @@
                 <div class="input-group-prepend">
                     <span class="input-group-text">$</span>
                 </div>
-                <input name="accrued[transport][0][viaticNoSalary]" class="form-control" type="text" value="{{ paysheet.details.accrued.transport.0.viaticNoSalary|default('') }}" />
+                <input name="accrued[transport][0][viaticNoSalary]" class="form-control accrued" type="text" value="{{ paysheet.details.accrued.transport.0.viaticNoSalary|default('') }}" />
             </div>
         </div>
     </div>
