--- a/templates/paysheet/__paysheet_accrued_vacation.html.twig
+++ b/templates/paysheet/__paysheet_accrued_vacation.html.twig
@@ -33,7 +33,7 @@
                 <div class="input-group-prepend">
                     <span class="input-group-text">$</span>
                 </div>
-                <input name="accrued[vacation][0][amount]" class="form-control" type="text" value="{{ paysheet.details.accrued.vacation.0.amount|default('') }}" />
+                <input name="accrued[vacation][0][amount]" class="form-control accrued" type="text" value="{{ paysheet.details.accrued.vacation.0.amount|default('') }}" />
             </div>
         </div>
     </div>
