--- a/templates/paysheet/__paysheet_deduction_health.html.twig
+++ b/templates/paysheet/__paysheet_deduction_health.html.twig
@@ -28,7 +28,7 @@
                 <div class="input-group-prepend">
                     <span class="input-group-text">$</span>
                 </div>
-                <input name="deduction[health][0][amount]" class="form-control" type="text" required value="{{ paysheet.details.deduction.health.0.amount|default('') }}" />
+                <input name="deduction[health][0][amount]" class="form-control deduction" type="text" required value="{{ paysheet.details.deduction.health.0.amount|default('') }}" />
             </div>
         </div>
 
@@ -48,7 +48,7 @@
                 <div class="input-group-prepend">
                     <span class="input-group-text">$</span>
                 </div>
-                <input name="deduction[pension][0][amount]" class="form-control" type="text" required value="{{ paysheet.details.deduction.pension.0.amount|default('') }}" />
+                <input name="deduction[pension][0][amount]" class="form-control deduction" type="text" required value="{{ paysheet.details.deduction.pension.0.amount|default('') }}" />
             </div>
         </div>
     </div>
